RESOLVED FIXED160642
[Cocoa] Reply block leaks if the remote object doesn’t call it
https://bugs.webkit.org/show_bug.cgi?id=160642
Summary [Cocoa] Reply block leaks if the remote object doesn’t call it
mitz
Reported 2016-08-06 19:23:07 PDT
When invoking a method with a reply block on a remote object proxy, if the remote object doesn’t invoke the reply block, it leaks on the sender side. Patch forthcoming.
Attachments
Release unused reply blocks (10.59 KB, patch)
2016-08-06 19:32 PDT, mitz
sam: review+
mitz
Comment 1 2016-08-06 19:32:01 PDT
Created attachment 285516 [details] Release unused reply blocks
Sam Weinig
Comment 2 2016-08-07 13:50:26 PDT
Comment on attachment 285516 [details] Release unused reply blocks View in context: https://bugs.webkit.org/attachment.cgi?id=285516&action=review > Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:89 > + class DoneWhenDestroyed : public WTF::RefCounted<DoneWhenDestroyed> { I don't think you need the WTF:: here, but it also doesn't hurt.
mitz
Comment 3 2016-08-07 13:52:19 PDT
Anders Carlsson
Comment 4 2017-02-06 09:06:45 PST
This is the cause of rdar://problem/30229358.
Note You need to log in before you can comment on or make changes to this bug.