[Cocoa] Reply block leaks if the remote object doesn’t call it https://bugs.webkit.org/show_bug.cgi?id=160642

Reviewed by Sam Weinig.

Source/WebKit2:

* Shared/API/Cocoa/RemoteObjectRegistry.h: Declared new member functions.
* Shared/API/Cocoa/RemoteObjectRegistry.messages.in: Added ReleaseUnusedReplyBlock message.
* Shared/API/Cocoa/RemoteObjectRegistry.mm:
(WebKit::RemoteObjectRegistry::sendUnusedReply): Send the ReleaseUnusedReplyBlock message.
(WebKit::RemoteObjectRegistry::releaseUnusedReplyBlock): Message receiver that call through
  to -_releaseReplyWithID:.

* Shared/API/Cocoa/_WKRemoteObjectRegistry.mm:
(-[_WKRemoteObjectRegistry _invokeMethod:]): Define a ReplyBlockCallChecker object and
  capture an instance of it in the reply block we pass to the exported object. Have that
  block set a flag on the checker when it’s called. If the checker gets destroyed without
  the block having been called, which means that the block got destroyed without being
  called, call sendUnusedReply to let the other side know that the block will not be invoked.
(-[_WKRemoteObjectRegistry _releaseReplyWithID:]): Added. Removed the pending reply from the
  map, which release the block.
* Shared/API/Cocoa/_WKRemoteObjectRegistryInternal.h:

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.h: Declared a new method.
* TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:
(TEST): Added a test case that checks that the reply block is released even when it’s not
  called.
* TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistryPlugIn.mm:
(-[RemoteObjectRegistryPlugIn doNotCallCompletionHandler:]): Implement new method by not
  calling the completion handler.



Canonical link: https://commits.webkit.org/178777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204245 268f45cc-cd09-0410-ab3c-d52691b4dbfc