Source/WebKit2/Shared/API/Cocoa/RemoteObjectRegistry.h
@@ -46,6 +46,7 @@ public:
 
     void sendInvocation(const RemoteObjectInvocation&);
     void sendReplyBlock(uint64_t replyID, const UserData& blockInvocation);
+    void sendUnusedReply(uint64_t replyID);
 
 private:
     // IPC::MessageReceiver
@@ -54,6 +55,7 @@ private:
     // Message handlers
     void invokeMethod(const RemoteObjectInvocation&);
     void callReplyBlock(uint64_t replyID, const UserData& blockInvocation);
+    void releaseUnusedReplyBlock(uint64_t replyID);
 
     _WKRemoteObjectRegistry *m_remoteObjectRegistry;
     IPC::MessageSender& m_messageSender;
