Source/WebKit2/Shared/API/Cocoa/_WKRemoteObjectRegistry.mm
@@ -216,11 +216,38 @@ static uint64_t generateReplyIdentifier()
 
             RetainPtr<_WKRemoteObjectRegistry> remoteObjectRegistry = self;
             uint64_t replyID = replyInfo->replyID;
-            id replyBlock = __NSMakeSpecialForwardingCaptureBlock(wireBlockSignature._typeString.UTF8String, [interface, remoteObjectRegistry, replyID](NSInvocation *invocation) {
+
+            class ReplyBlockCallChecker : public WTF::ThreadSafeRefCounted<ReplyBlockCallChecker> {
+            public:
+                static Ref<ReplyBlockCallChecker> create(_WKRemoteObjectRegistry *registry, uint64_t replyID) { return adoptRef(*new ReplyBlockCallChecker(registry, replyID)); }
+
+                ~ReplyBlockCallChecker()
+                {
+                    if (!m_didCallReplyBlock)
+                        m_remoteObjectRegistry->_remoteObjectRegistry->sendUnusedReply(m_replyID);
+                }
+
+                void didCallReplyBlock() { m_didCallReplyBlock = true; }
+
+            private:
+                ReplyBlockCallChecker(_WKRemoteObjectRegistry *registry, uint64_t replyID)
+                    : m_remoteObjectRegistry(registry)
+                    , m_replyID(replyID)
+                {
+                }
+
+                RetainPtr<_WKRemoteObjectRegistry> m_remoteObjectRegistry;
+                uint64_t m_replyID = 0;
+                bool m_didCallReplyBlock = false;
+            };
+
+            RefPtr<ReplyBlockCallChecker> checker = ReplyBlockCallChecker::create(self, replyID);
+            id replyBlock = __NSMakeSpecialForwardingCaptureBlock(wireBlockSignature._typeString.UTF8String, [interface, remoteObjectRegistry, replyID, checker](NSInvocation *invocation) {
                 auto encoder = adoptNS([[WKRemoteObjectEncoder alloc] init]);
                 [encoder encodeObject:invocation forKey:invocationKey];
 
                 remoteObjectRegistry->_remoteObjectRegistry->sendReplyBlock(replyID, UserData([encoder rootObjectDictionary]));
+                checker->didCallReplyBlock();
             });
 
             [invocation setArgument:&replyBlock atIndex:i];
@@ -268,6 +295,11 @@ static uint64_t generateReplyIdentifier()
 
     [replyInvocation setTarget:pendingReply.block.get()];
     [replyInvocation invoke];
+}
+
+- (void)_releaseReplyWithID:(uint64_t)replyID
+{
+    _pendingReplies.remove(replyID);
 }
 
 @end
