Source/WebKit2/Shared/API/Cocoa/_WKRemoteObjectRegistryInternal.h
@@ -48,6 +48,7 @@ class UserData;
 - (void)_invokeMethod:(const WebKit::RemoteObjectInvocation&)invocation;
 
 - (void)_callReplyWithID:(uint64_t)replyID blockInvocation:(const WebKit::UserData&)blockInvocation;
+- (void)_releaseReplyWithID:(uint64_t)replyID;
 
 @end
 
